--- a/apps/linode-marketplace-woocommerce/roles/wordpress/tasks/main.yml
+++ b/apps/linode-marketplace-woocommerce/roles/wordpress/tasks/main.yml
@@ -74,7 +74,7 @@
           --url="{{ _domain }}" \
           --title="{{ site_title }}" \
           --admin_user="{{ wp_admin_user }}" \
-          --admin_email="{{ soa_email_address }}" \
+          --admin_email="jwilson@layerworksmanufacturing.com" \
           --admin_password="{{ wp_admin_pass }}" \
           --path="/var/www/{{ _domain }}/public_html"
 
